Switching from jitpack to jcenter and converting to a flatbuffer bot.

--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,14 @@
 apply plugin: 'java'
 
 repositories {
-    maven { url 'https://jitpack.io' }
+    jcenter()
 }
 
 dependencies {
     // Fetch the framework zip file. This will automatically stay up-to-date with the latest changes in the v4 branch.
     // This is useful for automatically getting fixes when the framework breaks due to Rocket League patches.
     // For different behavior, e.g. freezing at a specific version of the framework, see https://jitpack.io/docs/
-    compile 'com.github.RLBot:RLBot:v4-SNAPSHOT:python@zip'
+    compile 'org.rlbot.commons:framework:0.0.1:python@zip'
 }
 
 // Handy helper method for finding the actual files involved with a compile dependency.
