--- a/rlbot.cfg
+++ b/rlbot.cfg
@@ -1,15 +1,20 @@
 [RLBot Configuration]
+# Visit https://github.com/RLBot/RLBot/wiki/Config-File-Documentation to see what you can put here.
 
+[Team Configuration]
+# Visit https://github.com/RLBot/RLBot/wiki/Config-File-Documentation to see what you can put here.
 
 [Match Configuration]
 # Number of bots/players which will be spawned.  We support up to max 10.
 num_participants = 2
-game_mode = 0
-game_map = 1
+game_mode = Soccer
+game_map = Mannfield
 
+[Mutator Configuration]
+# Visit https://github.com/RLBot/RLBot/wiki/Config-File-Documentation to see what you can put here.
 
 [Participant Configuration]
-# Put the name of your bot config file here.  Only total_num_participants config files will be read!
+# Put the name of your bot config file here.  Only num_participants config files will be read!
 # Everything needs a config, even players and default bots.  We still set loadouts and names from config!
 participant_config_0 = python_example/python_example.cfg
 participant_config_1 = python_example/python_example.cfg
