Fixing name config.

--- a/python_example/python_example.cfg
+++ b/python_example/python_example.cfg
@@ -4,3 +4,6 @@ looks_config = ./appearance.cfg
 
 # Path to python file. Can use relative path from here.
 python_file = ./python_example.py
+
+# Name of the bot in-game
+name = PythonExampleBot
