Moving the install and upgrade logic into a python script.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 # Include everything the framework requires
 # You will automatically get updates for all versions starting with "1.".
 rlbot==1.*
+
+# This will cause pip to auto-upgrade and stop scaring people with warning messages
+pip
