--- a/disaster/disasterBot.cfg
+++ b/disaster/disasterBot.cfg
@@ -1,9 +1,9 @@
 [Locations]
 # Path to loadout config. Can use relative path from here.
-looks_config = ./appearance.cfg
+looks_config = ./disasterAppearance.cfg
 
 # Path to python file. Can use relative path from here.
-python_file = ./python_example.py
+python_file = ./disasterBot.py
 
 # Name of the bot in-game
-name = PythonExampleBot
+name = DisasterBot
