--- a/rlbot.cfg
+++ b/rlbot.cfg
@@ -16,16 +16,16 @@ game_map = Mannfield
 [Participant Configuration]
 # Put the name of your bot config file here.  Only num_participants config files will be read!
 # Everything needs a config, even players and default bots.  We still set loadouts and names from config!
-participant_config_0 = python_example/python_example.cfg
-participant_config_1 = python_example/python_example.cfg
-participant_config_2 = python_example/python_example.cfg
-participant_config_3 = python_example/python_example.cfg
-participant_config_4 = python_example/python_example.cfg
-participant_config_5 = python_example/python_example.cfg
-participant_config_6 = python_example/python_example.cfg
-participant_config_7 = python_example/python_example.cfg
-participant_config_8 = python_example/python_example.cfg
-participant_config_9 = python_example/python_example.cfg
+participant_config_0 = disaster/disasterBot.cfg
+participant_config_1 = disaster/disasterBot.cfg
+participant_config_2 = disaster/disasterBot.cfg
+participant_config_3 = disaster/disasterBot.cfg
+participant_config_4 = disaster/disasterBot.cfg
+participant_config_5 = disaster/disasterBot.cfg
+participant_config_6 = disaster/disasterBot.cfg
+participant_config_7 = disaster/disasterBot.cfg
+participant_config_8 = disaster/disasterBot.cfg
+participant_config_9 = disaster/disasterBot.cfg
 
 # team 0 shoots on positive goal, team 1 shoots on negative goal
 participant_team_0 = 0
