--- a/disaster_bot/disaster_bot.cfg
+++ b/disaster_bot/disaster_bot.cfg
@@ -1,9 +1,9 @@
 [Locations]
 # Path to loadout config. Can use relative path from here.
-looks_config = ./disasterAppearance.cfg
+looks_config = ./disaster_bot_appearance.cfg
 
 # Path to python file. Can use relative path from here.
-python_file = ./disasterBot.py
+python_file = ./disaster_bot.py
 
 # Name of the bot in-game
 name = DisasterBot
