--- a/action/kickoff/test_agent.cfg
+++ b/action/kickoff/test_agent.cfg
@@ -1,6 +1,6 @@
 [Locations]
 # Path to loadout config. Can use relative path from here.
-looks_config = ./disaster_bot_appearance.cfg
+looks_config = ../../disaster_bot_appearance.cfg
 
 # Path to python file. Can use relative path from here.
 python_file = ./test_agent.py
