don't use countdown when testing

--- a/action/kickoff/rlbot.cfg
+++ b/action/kickoff/rlbot.cfg
@@ -9,6 +9,7 @@
 num_participants = 2
 game_mode = Soccer
 game_map = Mannfield
+start_without_countdown = True
 
 [Mutator Configuration]
 # Visit https://github.com/RLBot/RLBot/wiki/Config-File-Documentation to see what you can put here.
