changed description to be a multi-line example.

--- a/python_example/python_example.cfg
+++ b/python_example/python_example.cfg
@@ -14,7 +14,8 @@ name = PythonExampleBot
 developer = The RLBot community
 
 # Short description of the bot
-description = The official python example bot
+description = This is a multi-line description
+	of the official python example bot
 
 # Fun fact about the bot
 fun_fact = 
