--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Include everything the framework requires
 # You will automatically get updates for all versions starting with "1.".
 rlbot==1.*
-rlbottraining
+rlbottraining>=0.3.4
 
 # This will cause pip to auto-upgrade and stop scaring people with warning messages
 pip
