Adding a common name to the cfg
To detect or use. people call self driving car SDC, or skybot sky most of the time

--- a/python_example/python_example.cfg
+++ b/python_example/python_example.cfg
@@ -25,3 +25,6 @@ github = https://github.com/RLBot/RLBotPythonExample
 
 # Programming language
 language = python
+
+# Common name that the community uses
+common_name = Python example
