Renaming python_example to 'bot' so people won't feel compelled to change it.

--- a/src/bot.cfg
+++ b/src/bot.cfg
@@ -3,7 +3,7 @@
 looks_config = ./appearance.cfg
 
 # Path to python file. Can use relative path from here.
-python_file = ./python_example.py
+python_file = ./bot.py
 
 # Name of the bot in-game
 name = PythonExampleBot
@@ -18,7 +18,7 @@ description = This is a multi-line description
     of the official python example bot
 
 # Fun fact about the bot
-fun_fact = 
+fun_fact =
 
 # Link to github repository
 github = https://github.com/RLBot/RLBotPythonExample
