--- a/rlbot.cfg
+++ b/rlbot.cfg
@@ -1,14 +1,17 @@
 [RLBot Configuration]
 # Visit https://github.com/RLBot/RLBot/wiki/Config-File-Documentation to see what you can put here.
+networking_role = remote_rlbot_client
+network_address = 192.168.56.1
 
 [Team Configuration]
 # Visit https://github.com/RLBot/RLBot/wiki/Config-File-Documentation to see what you can put here.
 
 [Match Configuration]
 # Number of bots/players which will be spawned.  We support up to max 10.
-num_participants = 2
+num_participants = 1
 game_mode = Soccer
 game_map = Mannfield
+existing_match_behavior = Continue And Spawn
 
 [Mutator Configuration]
 # Visit https://github.com/RLBot/RLBot/wiki/Config-File-Documentation to see what you can put here.
