--- a/src/bot.cfg
+++ b/src/bot.cfg
@@ -6,7 +6,7 @@ looks_config = ./appearance.cfg
 python_file = ./bot.py
 
 # Name of the bot in-game
-name = PythonExampleBot
+name = AnonymousBot
 
 [Details]
 # These values are optional but useful metadata for helper programs
