--- a/rlbot.cfg
+++ b/rlbot.cfg
@@ -1,6 +1,6 @@
 [RLBot Configuration]
 # Visit https://github.com/RLBot/RLBot/wiki/Config-File-Documentation to see what you can put here.
-networking_role = remote_rlbot_client
+networking_role = remote_rlbot_server
 network_address = 192.168.1.100
 
 [Team Configuration]
@@ -10,11 +10,15 @@ network_address = 192.168.1.100
 # Number of bots/players which will be spawned.  We support up to max 10.
 num_participants = 1
 game_mode = Soccer
-game_map = Mannfield
-existing_match_behavior = Continue And Spawn
+game_map = UtopiaColiseum_Snowy
+existing_match_behavior = Restart
 
 [Mutator Configuration]
 # Visit https://github.com/RLBot/RLBot/wiki/Config-File-Documentation to see what you can put here.
+Respawn Time = 1 Second
+Boost Amount = Recharge (Fast)
+Rumble = Spike Rush
+Match Length = Unlimited
 
 [Participant Configuration]
 # Put the name of your bot config file here.  Only num_participants config files will be read!
