--- a/src/bot.cfg
+++ b/src/bot.cfg
@@ -8,6 +8,9 @@ python_file = ./bot.py
 # Name of the bot in-game
 name = PythonExampleBot
 
+# The maximum number of ticks per second that your bot wishes to receive.
+maximum_tick_rate_preference = 120
+
 [Details]
 # These values are optional but useful metadata for helper programs
 # Name of the bot's creator/developer
