--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 # You will automatically get updates for all versions starting with "1.".
 rlbot==1.*
 rlbottraining
+RLUtilities
 
 # This will cause pip to auto-upgrade and stop scaring people with warning messages
 pip
