Converting from spike rush to heatseeker.

--- a/src/bot.cfg
+++ b/src/bot.cfg
@@ -6,7 +6,7 @@ looks_config = ./appearance.cfg
 python_file = ./bot.py
 
 # Name of the bot in-game
-name = SpikeRushExampleBot
+name = HeatseekerHustle
 
 # The maximum number of ticks per second that your bot wishes to receive.
 maximum_tick_rate_preference = 120
