--- a/rlbot.cfg
+++ b/rlbot.cfg
@@ -7,12 +7,11 @@
 [Match Configuration]
 # Number of bots/players which will be spawned.  We support up to max 64.
 num_participants = 1
-game_mode = Soccer
+game_mode = Heatseeker
 game_map = Mannfield
 
 [Mutator Configuration]
 # Visit https://github.com/RLBot/RLBot/wiki/Config-File-Documentation to see what you can put here.
-Rumble = Spike Rush
 
 [Participant Configuration]
 # Put the name of your bot config file here.  Only num_participants config files will be read!
