Setting enable_rendering and enable_state_setting to true

--- a/rlbot.cfg
+++ b/rlbot.cfg
@@ -5,10 +5,13 @@
 # Visit https://github.com/RLBot/RLBot/wiki/Config-File-Documentation to see what you can put here.
 
 [Match Configuration]
+# Visit https://github.com/RLBot/RLBot/wiki/Config-File-Documentation to see what you can put here.
 # Number of bots/players which will be spawned.  We support up to max 64.
 num_participants = 2
 game_mode = Soccer
 game_map = Mannfield
+enable_rendering = True
+enable_state_setting = True
 
 [Mutator Configuration]
 # Visit https://github.com/RLBot/RLBot/wiki/Config-File-Documentation to see what you can put here.
