--- a/src/appearance.cfg
+++ b/src/appearance.cfg
@@ -1,3 +1,7 @@
+# You don't have to manually edit this file!
+# RLBotGUI has an appearance editor with a nice colorpicker, database of items and more!
+# To open it up, simply click the (i) icon next to your bot's name and then click Edit Appearance
+
 [Bot Loadout]
 team_color_id = 60
 custom_color_id = 0
