--- a/rlbot.cfg
+++ b/rlbot.cfg
@@ -12,9 +12,11 @@ game_mode = Soccer
 game_map = Mannfield
 enable_rendering = True
 enable_state_setting = True
+skip_replays = True
 
 [Mutator Configuration]
 # Visit https://github.com/RLBot/RLBot/wiki/Config-File-Documentation to see what you can put here.
+Match Length = Unlimited
 
 [Participant Configuration]
 # Put the name of your bot config file here.  Only num_participants config files will be read!
