--- a/src/bot.cfg
+++ b/src/bot.cfg
@@ -3,10 +3,10 @@
 looks_config = ./appearance.cfg
 
 # Path to python file. Can use relative path from here.
-python_file = ./bot.py
+python_file = ./main.py
 
 # Name of the bot in-game
-name = PythonExampleBot
+name = tRLolloBot
 
 # The maximum number of ticks per second that your bot wishes to receive.
 maximum_tick_rate_preference = 120
@@ -14,7 +14,7 @@ maximum_tick_rate_preference = 120
 [Details]
 # These values are optional but useful metadata for helper programs
 # Name of the bot's creator/developer
-developer = The RLBot community
+developer = Trollio
 
 # Short description of the bot
 description = This is a multi-line description
