--- a/src/appearance.cfg
+++ b/src/appearance.cfg
@@ -1,53 +1,100 @@
-# You don't have to manually edit this file!
-# RLBotGUI has an appearance editor with a nice colorpicker, database of items and more!
-# To open it up, simply click the (i) icon next to your bot's name and then click Edit Appearance
-
 [Bot Loadout]
-team_color_id = 60
-custom_color_id = 0
-car_id = 23
-decal_id = 0
+# Primary Color selection
+team_color_id = 33
+# Secondary Color selection
+custom_color_id = 57
+# Car type (Octane, Merc, etc)
+car_id = 1856
+# Type of decal
+decal_id = 295
+# Wheel selection
 wheels_id = 1565
+# Boost selection
 boost_id = 35
+# Antenna Selection
 antenna_id = 0
+# Hat Selection
 hat_id = 0
+# Paint Type (for first color)
 paint_finish_id = 1681
+# Paint Type (for secondary color)
 custom_finish_id = 1681
+# Engine Audio Selection
 engine_audio_id = 0
+# Car trail Selection
 trails_id = 3220
+# Goal Explosion Selection
 goal_explosion_id = 3018
+# Finds the closest primary color swatch based on the provided RGB value like [34, 255, 60]
+primary_color_lookup = None
+# Finds the closest secondary color swatch based on the provided RGB value like [34, 255, 60]
+secondary_color_lookup = None
 
 [Bot Loadout Orange]
-team_color_id = 3
-custom_color_id = 0
-car_id = 23
-decal_id = 0
-wheels_id = 1565
-boost_id = 35
-antenna_id = 0
-hat_id = 0
-paint_finish_id = 1681
-custom_finish_id = 1681
-engine_audio_id = 0
-trails_id = 3220
-goal_explosion_id = 3018
+# Primary Color selection
+team_color_id = 34
+# Secondary Color selection
+custom_color_id = 46
+# Car type (Octane, Merc, etc)
+car_id = 30
+# Type of decal
+decal_id = 294
+# Wheel selection
+wheels_id = 367
+# Boost selection
+boost_id = 59
+# Antenna Selection
+antenna_id = 800
+# Hat Selection
+hat_id = 232
+# Paint Type (for first color)
+paint_finish_id = 278
+# Paint Type (for secondary color)
+custom_finish_id = 280
+# Engine Audio Selection
+engine_audio_id = 1799
+# Car trail Selection
+trails_id = 2357
+# Goal Explosion Selection
+goal_explosion_id = 2482
+# Finds the closest primary color swatch based on the provided RGB value like [34, 255, 60]
+primary_color_lookup = None
+# Finds the closest secondary color swatch based on the provided RGB value like [34, 255, 60]
+secondary_color_lookup = None
 
 [Bot Paint Blue]
+# car_paint_id
 car_paint_id = 12
-decal_paint_id = 0
-wheels_paint_id = 7	
+# decal_paint_id
+decal_paint_id = 1
+# wheels_paint_id
+wheels_paint_id = 7
+# boost_paint_id
 boost_paint_id = 7
+# antenna_paint_id
 antenna_paint_id = 0
+# hat_paint_id
 hat_paint_id = 0
+# trails_paint_id
 trails_paint_id = 2
+# goal_explosion_paint_id
 goal_explosion_paint_id = 0
 
 [Bot Paint Orange]
+# car_paint_id
 car_paint_id = 12
+# decal_paint_id
 decal_paint_id = 0
-wheels_paint_id = 14
-boost_paint_id = 14
-antenna_paint_id = 0
-hat_paint_id = 0
-trails_paint_id = 14
-goal_explosion_paint_id = 0
+# wheels_paint_id
+wheels_paint_id = 6
+# boost_paint_id
+boost_paint_id = 1
+# antenna_paint_id
+antenna_paint_id = 1
+# hat_paint_id
+hat_paint_id = 1
+# trails_paint_id
+trails_paint_id = 9
+# goal_explosion_paint_id
+goal_explosion_paint_id = 9
+
